Fixed header height to prevent user screwups by adding way too much fugly header widgets

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -337,6 +337,8 @@ header {
 }
 
 .site-header {
+  max-height: 184px;
+  overflow: hidden;
 	.wrap,
 	.widget-wrap {
 		padding: 0;
@@ -396,13 +398,8 @@ header {
 			width: 100%;
 		}
 	}
-  #yoast-top-right {
-    margin: {
-      bottom: 10px;
-    }
-  }
 	section.widget {
-		margin: {
+		padding: {
 			top: 20px;
 		}
 		&.widget_search {
